website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.2.1/api/docusaurus.config.js.mdx
---
sidebar_position: 0
description: API reference for Docusaurus configuration file.
slug: /api/docusaurus-config
---

# `docusaurus.config.js`

import APITable from '@site/src/components/APITable';

:::info

請參閱入門指南中的[**配置**](../configuration.mdx)章節以獲取範例。

:::

## 概述 {#overview}

`docusaurus.config.js` 包含您網站的配置，並放置在網站的根目錄中。

此文件在 Node.js 環境中運行，應導出一個網站配置對象，或一個創建該對象的函數。

`docusaurus.config.js` 文件支援：

- [**ES 模組**](https://flaviocopes.com/es-modules/)
- [**CommonJS**](https://flaviocopes.com/commonjs/)
- [**TypeScript**](../typescript-support.mdx#typing-config)

範例：

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```js title="docusaurus.config.js"
export default async function createConfigAsync() {
  return {
    title: 'Docusaurus',
    url: 'https://docusaurus.io',
    // your site config ...
  };
}
```

:::tip

請參閱[**宣告 `docusaurus.config.js` 的語法**](../configuration.mdx#syntax-to-declare-docusaurus-config)以獲得更詳盡的範例和說明。

:::

## 必填字段 {#required-fields}

### `title` {#title}

- 類型：`string`

網站的標題。將用於元數據和瀏覽器標籤標題。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
};
```

### `url` {#url}

- 類型：`string`

網站的 URL。這也可以視為頂級域名。例如，`https://facebook.github.io` 是 https://facebook.github.io/metro/ 的 URL，而 `https://docusaurus.io` 是 https://docusaurus.io 的 URL。此字段與 [`baseUrl`](#baseUrl) 字段相關。

```js title="docusaurus.config.js"
export default {
  url: 'https://docusaurus.io',
};
```

### `baseUrl` {#baseUrl}

- 類型：`string`

網站的基礎 URL。可以視為主機名後的路徑。例如，`/metro/` 是 https://facebook.github.io/metro/ 的基礎 URL。對於沒有路徑的 URL，baseUrl 應設置為 `/`。此字段與 [`url`](#url) 字段相關。始終包含前導和尾隨斜線。

```js title="docusaurus.config.js"
export default {
  baseUrl: '/',
};
```

## 可選字段 {#optional-fields}

### `favicon` {#favicon}

- 類型：`string | undefined`

網站圖標的路徑；必須是可用於鏈接 href 的 URL。例如，如果您的圖標位於 `static/img/favicon.ico`：

```js title="docusaurus.config.js"
export default {
  favicon: '/img/favicon.ico',
};
```

### `trailingSlash` {#trailingSlash}

- 類型：`boolean | undefined`

允許自定義 URL/鏈接末尾是否包含尾隨斜線，以及如何生成靜態 HTML 文件：

- `undefined`（默認）：保持 URL 不變，並為 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `true`：為 URL/鏈接添加尾隨斜線，並為 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `false`：從 URL/鏈接中移除尾隨斜線，並為 `/docs/myDoc.md` 生成 `/docs/myDoc.html`

:::tip

每個靜態託管提供商對靜態文件的處理方式不同（此行為可能會隨時間變化）。

請參閱[部署指南](../deployment.mdx)和 [slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide) 以選擇適當的設置。

:::

### `i18n` {#i18n}

- 類型: `Object`

用於[網站本地化](../i18n/i18n-introduction.mdx)的國際化配置物件。

範例:

```js title="docusaurus.config.js"
export default {
  i18n: {
    defaultLocale: 'en',
    locales: ['en', 'fa'],
    path: 'i18n',
    localeConfigs: {
      en: {
        label: 'English',
        direction: 'ltr',
        htmlLang: 'en-US',
        calendar: 'gregory',
        path: 'en',
      },
      fa: {
        label: 'فارسی',
        direction: 'rtl',
        htmlLang: 'fa-IR',
        calendar: 'persian',
        path: 'fa',
      },
    },
  },
};
```

- `defaultLocale`: 該語言環境 (1) 不會在基礎URL中包含其名稱 (2) 使用`docusaurus start`指令時無需`--locale`選項 (3) 將用於`<link hrefLang="x-default">`標籤
- `locales`: 網站部署的語言環境列表。必須包含`defaultLocale`。
- `path`: 所有語言環境文件夾的根目錄。可以是絕對路徑或相對於配置文件的相對路徑。默認為`i18n`。
- `localeConfigs`: 每個語言環境的個別選項。
  - `label`: 在語言下拉選單中顯示的標籤。
  - `direction`: `ltr`（默認）或`rtl`（適用於[從右到左的語言](https://developer.mozilla.org/en-US/docs/Glossary/rtl)如波斯語、阿拉伯語、希伯來語等）。用於選擇語言環境的CSS和HTML元屬性。
  - `htmlLang`: 用於`<html lang="...">`（或任何其他DOM標籤名稱）和`<link ... hreflang="...">`的BCP 47語言標籤
  - `calendar`: 用於計算日期時代的[日曆](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Locale/calendar)。注意它不控制實際顯示的字符串格式：`MM/DD/YYYY`和`DD/MM/YYYY`都屬於`gregory`。要選擇格式（`DD/MM/YYYY`或`MM/DD/YYYY`），請將語言環境名稱設置為`en-GB`或`en-US`（`en`表示`en-US`）。
  - `path`: 該語言環境所有插件本地化文件夾的根目錄。將相對於`i18n.path`解析。默認為語言環境的名稱。注意：這不影響語言環境的`baseUrl`—基礎URL的定制正在開發中。

### `noIndex` {#noIndex}

- 類型: `boolean`

此選項會在所有頁面添加`<meta name="robots" content="noindex, nofollow">`，告訴搜索引擎不要索引您的網站（更多信息[請參閱](https://moz.com/learn/seo/robots-meta-directives)）。

範例:

```js title="docusaurus.config.js"
export default {
  noIndex: true, // Defaults to `false`
};
```

### `onBrokenLinks` {#onBrokenLinks}

- 類型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus檢測到任何失效鏈接時的行為。

默認情況下，它會拋出錯誤，以確保您不會發布任何失效鏈接。

:::note

失效鏈接檢測僅在生產構建（`docusaurus build`）時可用。

:::

### `onBrokenAnchors` {#onBrokenAnchors}

- 類型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus檢測到使用Docusaurus的`Heading`組件聲明的失效錨點時的行為。

默認情況下，它會打印警告，讓您知道失效的錨點。

### `onBrokenMarkdownLinks` {#onBrokenMarkdownLinks}

- 類型: `'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus檢測到任何失效的Markdown鏈接時的行為。

默認情況下，它會打印警告，讓您知道失效的Markdown鏈接。

### `onDuplicateRoutes` {#onDuplicateRoutes}

- 類型: `'ignore' | 'log' | 'warn' | 'throw'`

當 Docusaurus 偵測到[重複路由](/guides/creating-pages.mdx#duplicate-routes)時的行為。

預設情況下，當您執行 `yarn start` 或 `yarn build` 後會顯示警告訊息。

### `tagline` {#tagline}

- 類型: `string`

您網站的標語。

```js title="docusaurus.config.js"
export default {
  tagline:
    'Docusaurus makes it easy to maintain Open Source documentation websites.',
};
```

### `organizationName` {#organizationName}

- 類型: `string`

擁有該儲存庫的 GitHub 使用者或組織。若您不使用 `docusaurus deploy` 指令則不需設定此項。

```js title="docusaurus.config.js"
export default {
  // Docusaurus' organization is facebook
  organizationName: 'facebook',
};
```

### `projectName` {#projectName}

- 類型: `string`

GitHub 儲存庫名稱。若您不使用 `docusaurus deploy` 指令則不需設定此項。

```js title="docusaurus.config.js"
export default {
  projectName: 'docusaurus',
};
```

### `deploymentBranch` {#deploymentBranch}

- 類型: `string`

部署靜態檔案的分支名稱。若您不使用 `docusaurus deploy` 指令則不需設定此項。

```js title="docusaurus.config.js"
export default {
  deploymentBranch: 'gh-pages',
};
```

### `githubHost` {#githubHost}

- 類型: `string`

您的伺服器主機名稱。適用於 GitHub Enterprise 使用者。若您不使用 `docusaurus deploy` 指令則不需設定此項。

```js title="docusaurus.config.js"
export default {
  githubHost: 'github.com',
};
```

### `githubPort` {#githubPort}

- 類型: `string`

您的伺服器連接埠。適用於 GitHub Enterprise 使用者。若您不使用 `docusaurus deploy` 指令則不需設定此項。

```js title="docusaurus.config.js"
export default {
  githubPort: '22',
};
```

### `themeConfig` {#themeConfig}

- 類型: `Object`

用於自訂網站 UI（如導覽列和頁尾）的[主題設定](./themes/theme-configuration.mdx)物件。

範例:

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    docs: {
      sidebar: {
        hideable: false,
        autoCollapseCategories: false,
      },
    },
    colorMode: {
      defaultMode: 'light',
      disableSwitch: false,
      respectPrefersColorScheme: true,
    },
    navbar: {
      title: 'Site Title',
      logo: {
        alt: 'Site Logo',
        src: 'img/logo.svg',
        width: 32,
        height: 32,
      },
      items: [
        {
          to: 'docs/docusaurus.config.js',
          activeBasePath: 'docs',
          label: 'docusaurus.config.js',
          position: 'left',
        },
        // ... other links
      ],
    },
    footer: {
      style: 'dark',
      links: [
        {
          title: 'Docs',
          items: [
            {
              label: 'Docs',
              to: 'docs/doc1',
            },
          ],
        },
        // ... other links
      ],
      logo: {
        alt: 'Meta Open Source Logo',
        src: 'img/meta_oss_logo.png',
        href: 'https://opensource.fb.com',
        width: 160,
        height: 51,
      },
      copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`, // You can also put own HTML here
    },
  },
};
```

### `plugins` {#plugins}

- 類型: `PluginConfig[]`

```ts
type PluginConfig = string | [string, any] | PluginModule | [PluginModule, any];
```

詳見[插件方法參考](./plugin-methods/README.mdx)了解 `PluginModule` 的結構。

```js title="docusaurus.config.js"
export default {
  plugins: [
    'docusaurus-plugin-awesome',
    ['docusuarus-plugin-confetti', {fancy: false}],
    () => ({
      postBuild() {
        console.log('Build finished');
      },
    }),
  ],
};
```

### `themes` {#themes}

- 類型: `PluginConfig[]`

```js title="docusaurus.config.js"
export default {
  themes: ['@docusaurus/theme-classic'],
};
```

### `presets` {#presets}

- 類型: `PresetConfig[]`

```ts
type PresetConfig = string | [string, any];
```

```js title="docusaurus.config.js"
export default {
  presets: [],
};
```

### `markdown` {#markdown}

全域的 Docusaurus Markdown 設定。

- 類型: `MarkdownConfig`

```ts
type MarkdownPreprocessor = (args: {
  filePath: string;
  fileContent: string;
}) => string;

type MDX1CompatOptions =
  | boolean
  | {
      comments: boolean;
      admonitions: boolean;
      headingIds: boolean;
    };

export type ParseFrontMatter = (params: {
  filePath: string;
  fileContent: string;
  defaultParseFrontMatter: ParseFrontMatter;
}) => Promise<{
  frontMatter: {[key: string]: unknown};
  content: string;
}>;

type MarkdownConfig = {
  format: 'mdx' | 'md' | 'detect';
  mermaid: boolean;
  preprocessor?: MarkdownPreprocessor;
  parseFrontMatter?: ParseFrontMatter;
  mdx1Compat: MDX1CompatOptions;
  remarkRehypeOptions: object; // see https://github.com/remarkjs/remark-rehype#options
};
```

範例:

```js title="docusaurus.config.js"
export default {
  markdown: {
    format: 'mdx',
    mermaid: true,
    preprocessor: ({filePath, fileContent}) => {
      return fileContent.replaceAll('{{MY_VAR}}', 'MY_VALUE');
    },
    parseFrontMatter: async (params) => {
      const result = await params.defaultParseFrontMatter(params);
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');
      return result;
    },
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
  },
};
```

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `format` | `'mdx' \| 'md' \| 'detect'` | `'mdx'` | The default parser format to use for Markdown content. Using 'detect' will select the appropriate format automatically based on file extensions: `.md` vs `.mdx`. |
| `mermaid` | `boolean` | `false` | When `true`, allows Docusaurus to render Markdown code blocks with `mermaid` language as Mermaid diagrams. |
| `preprocessor` | `MarkdownPreprocessor` | `undefined` | Gives you the ability to alter the Markdown content string before parsing. Use it as a last-resort escape hatch or workaround: it is almost always better to implement a Remark/Rehype plugin. |
| `parseFrontMatter` | `ParseFrontMatter` | `undefined` | Gives you the ability to provide your own front matter parser, or to enhance the default parser. Read our [front matter guide](../guides/markdown-features/markdown-features-intro.mdx#front-matter) for details. |
| `mdx1Compat` | `MDX1CompatOptions` | `{comments: true, admonitions: true, headingIds: true}` | Compatibility options to make it easier to upgrade to Docusaurus v3+. |
| `remarkRehypeOptions` | `object` | `undefined` | Makes it possible to pass custom [`remark-rehype` options](https://github.com/remarkjs/remark-rehype#options). |

```mdx-code-block
</APITable>
```

### `customFields` {#customFields}

Docusaurus 會防止 `docusaurus.config.js` 出現未知欄位。若要新增自訂欄位，請在 `customFields` 中定義。

- 類型: `Object`

```js title="docusaurus.config.js"
export default {
  customFields: {
    admin: 'endi',
    superman: 'lol',
  },
};
```

嘗試在配置中添加未知字段將導致構建時錯誤：

```bash
Error: The field(s) 'foo', 'bar' are not recognized in docusaurus.config.js
```

### `staticDirectories` {#staticDirectories}

一個路徑數組，可以是相對於網站目錄或絕對路徑。這些路徑下的文件將原樣複製到構建輸出中。

- 類型：`string[]`

範例：

```js title="docusaurus.config.js"
export default {
  staticDirectories: ['static'],
};
```

### `headTags` {#headTags}

一個將插入到 HTML `<head>` 中的標籤數組。值必須是包含兩個屬性的對象；`tagName` 和 `attributes`。`tagName` 必須是一個字符串，決定創建的標籤類型；例如 `"link"`。`attributes` 必須是一個屬性-值的映射。

- 類型：`{ tagName: string; attributes: Object; }[]`

範例：

```js title="docusaurus.config.js"
export default {
  headTags: [
    {
      tagName: 'link',
      attributes: {
        rel: 'icon',
        href: '/img/docusaurus.png',
      },
    },
  ],
};
```

這將在生成的 HTML 中變為 `<link rel="icon" href="img/docusaurus.png" />`。

### `scripts` {#scripts}

一個要加載的腳本數組。值可以是字符串或屬性-值映射的普通對象。`<script>` 標籤將插入到 HTML `<head>` 中。如果使用普通對象，唯一必需的屬性是 `src`，並且允許任何其他屬性（每個屬性應具有布爾值/字符串值）。

請注意，此處添加的 `<script>` 是渲染阻塞的，因此您可能需要在對象中添加 `async: true`/`defer: true`。

- 類型：`(string | Object)[]`

範例：

```js title="docusaurus.config.js"
export default {
  scripts: [
    // String format.
    'https://docusaurus.io/script.js',
    // Object format.
    {
      src: 'https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js',
      async: true,
    },
  ],
};
```

### `stylesheets` {#stylesheets}

一個要加載的 CSS 源數組。值可以是字符串或屬性-值映射的普通對象。`<link>` 標籤將插入到 HTML `<head>` 中。如果使用對象，唯一必需的屬性是 `href`，並且允許任何其他屬性（每個屬性應具有布爾值/字符串值）。

- 類型：`(string | Object)[]`

範例：

```js title="docusaurus.config.js"
export default {
  stylesheets: [
    // String format.
    'https://docusaurus.io/style.css',
    // Object format.
    {
      href: 'http://mydomain.com/style.css',
    },
  ],
};
```

:::info

默認情況下，`<link>` 標籤將具有 `rel="stylesheet"`，但您可以顯式添加自定義的 `rel` 值來注入任何類型的 `<link>` 標籤，不一定是樣式表。

:::

### `clientModules` {#clientModules}

一個要在您的網站上全局加載的[客戶端模塊](../advanced/client.mdx#client-modules)數組。

範例：

```js title="docusaurus.config.js"
export default {
  clientModules: ['./mySiteGlobalJs.js', './mySiteGlobalCss.css'],
};
```

### `ssrTemplate` {#ssrTemplate}

一個使用 [Eta 語法](https://eta.js.org/docs/syntax#syntax-overview)編寫的 HTML 模板，用於渲染您的應用程序。這可以用來設置 `body` 標籤上的自定義屬性、額外的 `meta` 標籤、自定義 `viewport` 等。請注意，Docusaurus 將依賴於模板的正確結構才能正常運行，一旦您自定義它，您必須確保您的模板符合上游的要求。

- 類型：`string`

範例：

```js title="docusaurus.config.js"
export default {
  ssrTemplate: `<!DOCTYPE html>
<html <%~ it.htmlAttributes %>>
  <head>
    <meta charset="UTF-8">
    <meta name="generator" content="Docusaurus v<%= it.version %>">
    <% it.metaAttributes.forEach((metaAttribute) => { %>
      <%~ metaAttribute %>
    <% }); %>
    <%~ it.headTags %>
    <% it.stylesheets.forEach((stylesheet) => { %>
      <link rel="stylesheet" href="<%= it.baseUrl %><%= stylesheet %>" />
    <% }); %>
    <% it.scripts.forEach((script) => { %>
      <link rel="preload" href="<%= it.baseUrl %><%= script %>" as="script">
    <% }); %>
  </head>
  <body <%~ it.bodyAttributes %>>
    <%~ it.preBodyTags %>
    <div id="__docusaurus">
      <%~ it.appHtml %>
    </div>
    <% it.scripts.forEach((script) => { %>
      <script src="<%= it.baseUrl %><%= script %>"></script>
    <% }); %>
    <%~ it.postBodyTags %>
  </body>
</html>`,
};
```

### `titleDelimiter` {#titleDelimiter}

- 類型：`string`

將用作生成的 `<title>` 標籤中的標題分隔符。

範例：

```js title="docusaurus.config.js"
export default {
  titleDelimiter: '🦖', // Defaults to `|`
};
```

### `baseUrlIssueBanner` {#baseUrlIssueBanner}

- 類型：`boolean`

啟用時，若網站無法載入 CSS 或 JavaScript 檔案（常見問題，通常與網站配置中錯誤的 `baseUrl` 有關），將顯示警示橫幅。

範例：

```js title="docusaurus.config.js"
export default {
  baseUrlIssueBanner: true, // Defaults to `true`
};
```

![基本網址問題警示橫幅範例。由於樣式表載入失敗，樣式呈現原始狀態。文字內容為「您的 Docusaurus 網站未能正確載入...當前設定的 baseUrl = /（預設值）；建議嘗試 baseUrl = /build/」](/img/baseUrlIssueBanner.png)

:::warning

此橫幅需內聯 CSS/JS，以防因基本網址錯誤導致所有資源載入失敗。

若您採用嚴格的[內容安全政策](https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP)，建議直接停用此功能。

:::